crates/frontend/samples/test12.out
error: name `Foo` used more than once in enum
   ┌─ crates/frontend/samples/test12.fir:10:5
   │
10 │     Foo((), pub (), ()),
   │     ^^^

note: name previously used here
  ┌─ crates/frontend/samples/test12.fir:8:5
  │
8 │     Foo { pub foo: (), foo: () },
  │     ^^^

error: duplicate field name
  ┌─ crates/frontend/samples/test12.fir:4:5
  │
4 │     foo: (),
  │     ^^^^^^^

note: name first used here
  ┌─ crates/frontend/samples/test12.fir:2:9
  │
2 │     pub foo: T,
  │         ^^^

error: enum fields are all implicitly public
  ┌─ crates/frontend/samples/test12.fir:8:11
  │
8 │     Foo { pub foo: (), foo: () },
  │           ^^^

error: duplicate field name
  ┌─ crates/frontend/samples/test12.fir:8:24
  │
8 │     Foo { pub foo: (), foo: () },
  │                        ^^^^^^^

note: name first used here
  ┌─ crates/frontend/samples/test12.fir:8:15
  │
8 │     Foo { pub foo: (), foo: () },
  │               ^^^

error: enum fields are all implicitly public
   ┌─ crates/frontend/samples/test12.fir:10:13
   │
10 │     Foo((), pub (), ()),
   │             ^^^

error: expected enum or struct
   ┌─ crates/frontend/samples/test12.fir:17:9
   │
17 │     Kaz(Foo),
   │         ^^^
